add requirements txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+# Core dependencies
 requests>=2.31.0
 pandas>=2.0.0
+
+# API dependencies
 openai>=1.0.0
 python-dotenv>=1.0.0
+
+# Development/testing
+pytest>=7.0.0
