--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
   "functions": {
     "api/**/*.py": {
+      "runtime": "python3.12",
       "maxDuration": 30
     }
   },
